[gd_scene load_steps=19 format=2]

[ext_resource path="res://Assets/White_square.png" type="Texture" id=1]
[ext_resource path="res://Assets/Fonts/ThaleahFat.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Fonts/Casino3DMarqueeRegular-d9A2V.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scripts/UI/MainMenu.gd" type="Script" id=4]

[sub_resource type="Theme" id=11]
default_font = ExtResource( 3 )
Label/colors/font_color = Color( 1, 1, 1, 1 )
Label/colors/font_color_shadow = Color( 0, 0, 0, 1 )
Label/colors/font_outline_modulate = Color( 0, 0, 0, 1 )
Label/constants/line_spacing = 0
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 0
Label/constants/shadow_offset_y = 0
Label/fonts/font = ExtResource( 3 )
Label/styles/normal = null

[sub_resource type="DynamicFont" id=2]
size = 32
extra_spacing_top = 5
extra_spacing_bottom = 5
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.34902, 0.34902, 0.34902, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.878431, 0.278431, 0.278431, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.670588, 0.207843, 0.207843, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.878431, 0.278431, 0.278431, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.878431, 0.278431, 0.278431, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20

[sub_resource type="Theme" id=12]
Button/colors/font_color = Color( 1, 1, 1, 1 )
Button/colors/font_color_disabled = Color( 1, 1, 1, 1 )
Button/colors/font_color_focus = Color( 1, 1, 1, 1 )
Button/colors/font_color_hover = Color( 1, 1, 1, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 0
Button/fonts/font = SubResource( 2 )
Button/styles/disabled = SubResource( 6 )
Button/styles/focus = SubResource( 7 )
Button/styles/hover = SubResource( 8 )
Button/styles/normal = SubResource( 9 )
Button/styles/pressed = SubResource( 10 )

[sub_resource type="DynamicFont" id=14]
size = 25
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=17]

[sub_resource type="StyleBoxFlat" id=15]
draw_center = false
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5

[sub_resource type="StyleBoxFlat" id=16]
draw_center = false

[sub_resource type="DynamicFont" id=18]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=13]
Button/colors/font_color = Color( 1, 1, 1, 1 )
Button/colors/font_color_disabled = Color( 1, 1, 1, 1 )
Button/colors/font_color_focus = Color( 1, 1, 1, 1 )
Button/colors/font_color_hover = Color( 1, 1, 1, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 0
Button/fonts/font = SubResource( 14 )
Button/styles/disabled = SubResource( 17 )
Button/styles/focus = SubResource( 15 )
Button/styles/hover = SubResource( 15 )
Button/styles/normal = SubResource( 16 )
Button/styles/pressed = SubResource( 15 )
Label/colors/font_color = Color( 1, 1, 1, 1 )
Label/colors/font_color_shadow = Color( 1, 1, 1, 1 )
Label/colors/font_outline_modulate = Color( 1, 1, 1, 1 )
Label/constants/line_spacing = 0
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 0
Label/constants/shadow_offset_y = 0
Label/fonts/font = SubResource( 18 )
Label/styles/normal = null

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="Background" type="TextureRect" parent="."]
modulate = Color( 0.317647, 0.505882, 0.831373, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.295898
anchor_top = 0.2375
anchor_right = 0.708984
anchor_bottom = 0.83125
custom_constants/separation = 15
alignment = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Title" type="Label" parent="VBoxContainer"]
margin_top = 32.0
margin_right = 423.0
margin_bottom = 152.0
theme = SubResource( 11 )
text = "borlair"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 167.0
margin_right = 423.0
margin_bottom = 347.0
custom_constants/separation = 15
alignment = 1

[node name="ContinueGame" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_right = 423.0
margin_bottom = 50.0
theme = SubResource( 12 )
text = "Continue"

[node name="Settings" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_top = 65.0
margin_right = 423.0
margin_bottom = 115.0
theme = SubResource( 12 )
text = "Setting"

[node name="QuitToDesktop" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_top = 130.0
margin_right = 423.0
margin_bottom = 180.0
theme = SubResource( 12 )
text = "Quit to desktop"

[node name="Credit" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -112.0
margin_top = -72.0
margin_right = -40.0
margin_bottom = -16.0
focus_mode = 0
theme = SubResource( 13 )
text = "Credit"
align = 2

[node name="VersionNumber" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = -72.0
margin_right = 72.0
margin_bottom = -16.0
theme = SubResource( 13 )
text = "BETA_1.0"
valign = 1

[connection signal="pressed" from="VBoxContainer/VBoxContainer/ContinueGame" to="." method="_on_ContinueGame_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/QuitToDesktop" to="." method="_on_QuitToDesktop_pressed"]
